[gd_scene load_steps=13 format=4 uid="uid://drn2ewl7f17g8"]

[ext_resource type="Script" uid="uid://dvossm7jibotn" path="res://scenes/game.gd" id="1_iywne"]
[ext_resource type="Texture2D" uid="uid://6ov6lyfi6pmc" path="res://sprites/background_tiles.png" id="3_p57ef"]
[ext_resource type="Script" uid="uid://b5a07lfm1u41v" path="res://scenes/grid_spaces_manager.gd" id="3_u5sy4"]
[ext_resource type="PackedScene" uid="uid://vwc2pbbeqkcc" path="res://scenes/grid_space.tscn" id="4_gee14"]
[ext_resource type="PackedScene" uid="uid://8w53x1kmfva5" path="res://scenes/ball.tscn" id="4_u5sy4"]
[ext_resource type="Script" uid="uid://cwp15xjuamry4" path="res://scenes/button_grid_container.gd" id="6_0tnpc"]
[ext_resource type="Texture2D" uid="uid://dyu3deoasya71" path="res://sprites/vertical_wall_standalone.png" id="6_gee14"]
[ext_resource type="Texture2D" uid="uid://dl53msdx3aocs" path="res://sprites/horizontal_wall_standalone.png" id="7_0tnpc"]
[ext_resource type="PackedScene" uid="uid://chfgsbujxkuq6" path="res://scenes/grid_space_button.tscn" id="7_vtaks"]
[ext_resource type="Texture2D" uid="uid://baj663vt3sf1d" path="res://sprites/bomb_standalone.png" id="8_vtaks"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nmxvb"]
texture = ExtResource("3_p57ef")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSet" id="TileSet_opebo"]
sources/0 = SubResource("TileSetAtlasSource_nmxvb")

[node name="Game" type="Node" node_paths=PackedStringArray("grid_spaces_manager", "grid_space_button_manager", "ball_holder", "background_tile_map", "game_ui_canvaslayer", "placeable_pieces_buttons", "turn_label", "p1_points_label", "p2_points_label", "bomb_button", "ball_move_speed_timer")]
script = ExtResource("1_iywne")
grid_spaces_manager = NodePath("GridSpacesManager")
grid_space_button_manager = NodePath("GameUI/HBoxContainer/GameMiddleSpacer/GridSpaceButtonManager")
ball_holder = NodePath("BallHolder")
background_tile_map = NodePath("BackgroundTileMap")
game_ui_canvaslayer = NodePath("GameUI")
placeable_pieces_buttons = NodePath("GameUI/HBoxContainer/PlaceablePieces/RightVBox")
turn_label = NodePath("GameUI/HBoxContainer/LeftVBox/TurnLabel")
p1_points_label = NodePath("GameUI/HBoxContainer/LeftVBox/P1PointsLabel")
p2_points_label = NodePath("GameUI/HBoxContainer/LeftVBox/P2PointsLabel")
bomb_button = NodePath("GameUI/HBoxContainer/PlaceablePieces/RightVBox/BombButton")
ball_scene = ExtResource("4_u5sy4")
ball_speed = 0.2
ball_move_speed_timer = NodePath("BallMoveSpeedTimer")

[node name="BackgroundTileMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD1//3/AAADAAAAAAD1//7/AAADAAAAAAD1////AAADAAAAAAD1/wAAAAADAAAAAAD1/wEAAAADAAAAAAD1/wIAAAADAAAAAAD1/wMAAAADAAAAAAD1/wQAAAADAAAAAAD1/wUAAAADAAAAAAD1/wYAAAADAAAAAAD1/wcAAAADAAAAAAD1/wgAAAADAAAAAAD1/wkAAAADAAAAAAD2//3/AAADAAAAAAD2//7/AAADAAAAAAD2////AAADAAAAAAD2/wAAAAADAAAAAAD2/wEAAAADAAAAAAD2/wIAAAADAAAAAAD2/wMAAAADAAAAAAD2/wQAAAADAAAAAAD2/wUAAAADAAAAAAD2/wYAAAADAAAAAAD2/wcAAAADAAAAAAD2/wgAAAADAAAAAAD2/wkAAAADAAAAAAD3//3/AAADAAAAAAD3//7/AAADAAAAAAD3////AAADAAAAAAD3/wAAAAADAAAAAAD3/wEAAAADAAAAAAD3/wIAAAADAAAAAAD3/wMAAAADAAAAAAD3/wQAAAADAAAAAAD3/wUAAAADAAAAAAD3/wYAAAADAAAAAAD3/wcAAAADAAAAAAD3/wgAAAADAAAAAAD3/wkAAAADAAAAAAD4//3/AAADAAAAAAD4//7/AAADAAAAAAD4////AAADAAAAAAD4/wAAAAADAAAAAAD4/wEAAAADAAAAAAD4/wIAAAADAAAAAAD4/wMAAAADAAAAAAD4/wQAAAADAAAAAAD4/wUAAAADAAAAAAD4/wYAAAADAAAAAAD4/wcAAAADAAAAAAD4/wgAAAADAAAAAAD4/wkAAAADAAAAAAD5//3/AAAAAAEAAAD5//7/AAAAAAEAAAD5////AAAAAAMAAAD5/wAAAAACAAMAAAD5/wEAAAAAAAEAAAD5/wIAAAAAAAEAAAD5/wMAAAAAAAEAAAD5/wQAAAAAAAEAAAD5/wUAAAAAAAEAAAD5/wYAAAADAAIAAAD5/wcAAAADAAAAAAD5/wgAAAADAAAAAAD5/wkAAAADAAAAAAD6//3/AAAAAAAAAAD6//7/AAAAAAAAAAD6////AAACAAAAAAD6/wAAAAABAAAAAAD6/wEAAAAAAAAAAAD6/wIAAAAAAAAAAAD6/wMAAAAAAAAAAAD6/wQAAAAAAAAAAAD6/wUAAAAAAAAAAAD6/wYAAAABAAEAAAD6/wcAAAADAAAAAAD6/wgAAAADAAAAAAD6/wkAAAADAAAAAAD7//3/AAAAAAAAAAD7//7/AAAAAAAAAAD7////AAACAAAAAAD7/wAAAAABAAAAAAD7/wEAAAAAAAAAAAD7/wIAAAAAAAAAAAD7/wMAAAAAAAAAAAD7/wQAAAAAAAAAAAD7/wUAAAAAAAAAAAD7/wYAAAABAAEAAAD7/wcAAAADAAAAAAD7/wgAAAADAAAAAAD7/wkAAAADAAAAAAD8//3/AAAAAAAAAAD8//7/AAAAAAAAAAD8////AAACAAAAAAD8/wAAAAABAAAAAAD8/wEAAAAAAAAAAAD8/wIAAAAAAAAAAAD8/wMAAAAAAAAAAAD8/wQAAAAAAAAAAAD8/wUAAAAAAAAAAAD8/wYAAAABAAEAAAD8/wcAAAADAAAAAAD8/wgAAAADAAAAAAD8/wkAAAADAAAAAAD9//3/AAAAAAAAAAD9//7/AAAAAAAAAAD9////AAACAAAAAAD9/wAAAAABAAAAAAD9/wEAAAAAAAAAAAD9/wIAAAAAAAAAAAD9/wMAAAAAAAAAAAD9/wQAAAAAAAAAAAD9/wUAAAAAAAAAAAD9/wYAAAABAAEAAAD9/wcAAAADAAAAAAD9/wgAAAADAAAAAAD9/wkAAAADAAAAAAD+//3/AAAAAAAAAAD+//7/AAAAAAAAAAD+////AAACAAAAAAD+/wAAAAABAAAAAAD+/wEAAAAAAAAAAAD+/wIAAAAAAAAAAAD+/wMAAAAAAAAAAAD+/wQAAAAAAAAAAAD+/wUAAAAAAAAAAAD+/wYAAAABAAEAAAD+/wcAAAADAAAAAAD+/wgAAAADAAAAAAD+/wkAAAADAAAAAAD///3/AAAAAAAAAAD///7/AAAAAAAAAAD/////AAACAAAAAAD//wAAAAABAAAAAAD//wEAAAAAAAAAAAD//wIAAAAAAAAAAAD//wMAAAAAAAAAAAD//wQAAAAAAAAAAAD//wUAAAAAAAAAAAD//wYAAAABAAEAAAD//wcAAAADAAAAAAD//wgAAAADAAAAAAD//wkAAAADAAAAAAAQAP3/AAADAAAAAAAQAP7/AAADAAAAAAAQAP//AAADAAAAAAAQAAAAAAADAAAAAAAQAAEAAAADAAAAAAAQAAIAAAADAAAAAAAQAAMAAAADAAAAAAAQAAQAAAADAAAAAAAQAAUAAAADAAAAAAAQAAYAAAADAAAAAAAQAAcAAAADAAAAAAAQAAgAAAADAAAAAAAQAAkAAAADAAAAAADu//b/AAADAAAAAADu//f/AAADAAAAAADu//j/AAADAAAAAADu//n/AAADAAAAAADu//r/AAADAAAAAADu//v/AAADAAAAAADu//z/AAADAAAAAADu//3/AAADAAAAAADu//7/AAADAAAAAADu////AAADAAAAAADu/wAAAAADAAAAAADu/wEAAAADAAAAAADu/wIAAAADAAAAAADu/wMAAAADAAAAAADu/wQAAAADAAAAAADu/wUAAAADAAAAAADu/wYAAAADAAAAAADu/wcAAAADAAAAAADu/wgAAAADAAAAAADu/wkAAAADAAAAAADv//b/AAADAAAAAADv//f/AAADAAAAAADv//j/AAADAAAAAADv//n/AAADAAAAAADv//r/AAADAAAAAADv//v/AAADAAAAAADv//z/AAADAAAAAADv//3/AAADAAAAAADv//7/AAADAAAAAADv////AAADAAAAAADv/wAAAAADAAAAAADv/wEAAAADAAAAAADv/wIAAAADAAAAAADv/wMAAAADAAAAAADv/wQAAAADAAAAAADv/wUAAAADAAAAAADv/wYAAAADAAAAAADv/wcAAAADAAAAAADv/wgAAAADAAAAAADv/wkAAAADAAAAAADw//b/AAADAAAAAADw//f/AAADAAAAAADw//j/AAADAAAAAADw//n/AAADAAAAAADw//r/AAADAAAAAADw//v/AAADAAAAAADw//z/AAADAAAAAADw//3/AAADAAAAAADw//7/AAADAAAAAADw////AAADAAAAAADw/wAAAAADAAAAAADw/wEAAAADAAAAAADw/wIAAAADAAAAAADw/wMAAAADAAAAAADw/wQAAAADAAAAAADw/wUAAAADAAAAAADw/wYAAAADAAAAAADw/wcAAAADAAAAAADw/wgAAAADAAAAAADw/wkAAAADAAAAAADx//b/AAADAAAAAADx//f/AAADAAAAAADx//j/AAADAAAAAADx//n/AAADAAAAAADx//r/AAADAAAAAADx//v/AAADAAAAAADx//z/AAADAAAAAADx//3/AAADAAAAAADx//7/AAADAAAAAADx////AAADAAAAAADx/wAAAAADAAAAAADx/wEAAAADAAAAAADx/wIAAAADAAAAAADx/wMAAAADAAAAAADx/wQAAAADAAAAAADx/wUAAAADAAAAAADx/wYAAAADAAAAAADx/wcAAAADAAAAAADx/wgAAAADAAAAAADx/wkAAAADAAAAAADy//b/AAADAAAAAADy//f/AAADAAAAAADy//j/AAADAAAAAADy//n/AAADAAAAAADy//r/AAADAAAAAADy//v/AAADAAAAAADy//z/AAADAAAAAADy//3/AAADAAAAAADy//7/AAADAAAAAADy////AAADAAAAAADy/wAAAAADAAAAAADy/wEAAAADAAAAAADy/wIAAAADAAAAAADy/wMAAAADAAAAAADy/wQAAAADAAAAAADy/wUAAAADAAAAAADy/wYAAAADAAAAAADy/wcAAAADAAAAAADy/wgAAAADAAAAAADy/wkAAAADAAAAAADz//b/AAADAAAAAADz//f/AAADAAAAAADz//j/AAADAAAAAADz//n/AAADAAAAAADz//r/AAADAAAAAADz//v/AAADAAAAAADz//z/AAADAAAAAADz//3/AAADAAAAAADz//7/AAADAAAAAADz////AAADAAAAAADz/wAAAAADAAAAAADz/wEAAAADAAAAAADz/wIAAAADAAAAAADz/wMAAAADAAAAAADz/wQAAAADAAAAAADz/wUAAAADAAAAAADz/wYAAAADAAAAAADz/wcAAAADAAAAAADz/wgAAAADAAAAAADz/wkAAAADAAAAAAD0//b/AAADAAAAAAD0//f/AAADAAAAAAD0//j/AAADAAAAAAD0//n/AAADAAAAAAD0//r/AAADAAAAAAD0//v/AAADAAAAAAD0//z/AAADAAAAAAD0//3/AAADAAAAAAD0//7/AAADAAAAAAD0////AAADAAAAAAD0/wAAAAADAAAAAAD0/wEAAAADAAAAAAD0/wIAAAADAAAAAAD0/wMAAAADAAAAAAD0/wQAAAADAAAAAAD0/wUAAAADAAAAAAD0/wYAAAADAAAAAAD0/wcAAAADAAAAAAD0/wgAAAADAAAAAAD0/wkAAAADAAAAAAD1//b/AAADAAAAAAD1//f/AAADAAAAAAD1//j/AAADAAAAAAD1//n/AAADAAAAAAD1//r/AAADAAAAAAD1//v/AAADAAAAAAD1//z/AAADAAAAAAD2//b/AAADAAAAAAD2//f/AAADAAAAAAD2//j/AAADAAAAAAD2//n/AAADAAAAAAD2//r/AAADAAAAAAD2//v/AAADAAAAAAD2//z/AAADAAAAAAD3//b/AAADAAAAAAD3//f/AAADAAAAAAD3//j/AAADAAAAAAD3//n/AAADAAAAAAD3//r/AAADAAAAAAD3//v/AAADAAAAAAD3//z/AAADAAAAAAD4//b/AAADAAAAAAD4//f/AAADAAAAAAD4//j/AAADAAAAAAD4//n/AAADAAAAAAD4//r/AAADAAAAAAD4//v/AAADAAAAAAD4//z/AAADAAAAAAD5//b/AAADAAAAAAD5//f/AAADAAAAAAD5//j/AAADAAAAAAD5//n/AAAAAAIAAAD5//r/AAAAAAEAAAD5//v/AAAAAAEAAAD5//z/AAAAAAEAAAD6//b/AAADAAAAAAD6//f/AAADAAAAAAD6//j/AAADAAAAAAD6//n/AAADAAEAAAD6//r/AAAAAAAAAAD6//v/AAAAAAAAAAD6//z/AAAAAAAAAAD7//b/AAADAAAAAAD7//f/AAADAAAAAAD7//j/AAADAAAAAAD7//n/AAADAAEAAAD7//r/AAAAAAAAAAD7//v/AAAAAAAAAAD7//z/AAAAAAAAAAD8//b/AAADAAAAAAD8//f/AAADAAAAAAD8//j/AAADAAAAAAD8//n/AAADAAEAAAD8//r/AAAAAAAAAAD8//v/AAAAAAAAAAD8//z/AAAAAAAAAAD9//b/AAADAAAAAAD9//f/AAADAAAAAAD9//j/AAADAAAAAAD9//n/AAADAAEAAAD9//r/AAAAAAAAAAD9//v/AAAAAAAAAAD9//z/AAAAAAAAAAD+//b/AAADAAAAAAD+//f/AAADAAAAAAD+//j/AAADAAAAAAD+//n/AAADAAEAAAD+//r/AAAAAAAAAAD+//v/AAAAAAAAAAD+//z/AAAAAAAAAAD///b/AAADAAAAAAD///f/AAADAAAAAAD///j/AAADAAAAAAD///n/AAADAAEAAAD///r/AAAAAAAAAAD///v/AAAAAAAAAAD///z/AAAAAAAAAAAQAPb/AAADAAAAAAAQAPf/AAADAAAAAAAQAPj/AAADAAAAAAAQAPn/AAADAAAAAAAQAPr/AAADAAAAAAAQAPv/AAADAAAAAAAQAPz/AAADAAAAAAABAPb/AAADAAAAAAABAPf/AAADAAAAAAABAPj/AAADAAAAAAABAPn/AAADAAEAAAABAPr/AAAAAAAAAAABAPv/AAAAAAAAAAABAPz/AAAAAAAAAAABAP3/AAAAAAAAAAABAP7/AAAAAAAAAAABAP//AAACAAAAAAABAAAAAAABAAAAAAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAABAAEAAAABAAcAAAADAAAAAAABAAgAAAADAAAAAAABAAkAAAADAAAAAAACAPb/AAADAAAAAAACAPf/AAADAAAAAAACAPj/AAADAAAAAAACAPn/AAADAAEAAAACAPr/AAAAAAAAAAACAPv/AAAAAAAAAAACAPz/AAAAAAAAAAACAP3/AAAAAAAAAAACAP7/AAAAAAAAAAACAP//AAACAAAAAAACAAAAAAABAAAAAAACAAEAAAAAAAAAAAACAAIAAAAAAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAAAAAACAAUAAAAAAAAAAAACAAYAAAABAAEAAAACAAcAAAADAAAAAAACAAgAAAADAAAAAAACAAkAAAADAAAAAAADAPb/AAADAAAAAAADAPf/AAADAAAAAAADAPj/AAADAAAAAAADAPn/AAADAAEAAAADAPr/AAAAAAAAAAADAPv/AAAAAAAAAAADAPz/AAAAAAAAAAADAP3/AAAAAAAAAAADAP7/AAAAAAAAAAADAP//AAACAAAAAAADAAAAAAABAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAABAAEAAAADAAcAAAADAAAAAAADAAgAAAADAAAAAAADAAkAAAADAAAAAAAEAPb/AAADAAAAAAAEAPf/AAADAAAAAAAEAPj/AAADAAAAAAAEAPn/AAADAAEAAAAEAPr/AAAAAAAAAAAEAPv/AAAAAAAAAAAEAPz/AAAAAAAAAAAEAP3/AAAAAAAAAAAEAP7/AAAAAAAAAAAEAP//AAACAAAAAAAEAAAAAAABAAAAAAAEAAEAAAAAAAAAAAAEAAIAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAQAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAYAAAABAAEAAAAEAAcAAAADAAAAAAAEAAgAAAADAAAAAAAEAAkAAAADAAAAAAAFAPb/AAADAAAAAAAFAPf/AAADAAAAAAAFAPj/AAADAAAAAAAFAPn/AAADAAEAAAAFAPr/AAAAAAAAAAAFAPv/AAAAAAAAAAAFAPz/AAAAAAAAAAAFAP3/AAAAAAAAAAAFAP7/AAAAAAAAAAAFAP//AAACAAAAAAAFAAAAAAABAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAABAAEAAAAFAAcAAAADAAAAAAAFAAgAAAADAAAAAAAFAAkAAAADAAAAAAAGAPb/AAADAAAAAAAGAPf/AAADAAAAAAAGAPj/AAADAAAAAAAGAPn/AAABAAIAAAAGAPr/AAACAAEAAAAGAPv/AAACAAEAAAAGAPz/AAACAAEAAAAGAP3/AAACAAEAAAAGAP7/AAACAAEAAAAGAP//AAABAAMAAAAGAAAAAAADAAMAAAAGAAEAAAACAAEAAAAGAAIAAAACAAEAAAAGAAMAAAACAAEAAAAGAAQAAAACAAEAAAAGAAUAAAACAAEAAAAGAAYAAAACAAIAAAAGAAcAAAADAAAAAAAGAAgAAAADAAAAAAAGAAkAAAADAAAAAAAHAPb/AAADAAAAAAAHAPf/AAADAAAAAAAHAPj/AAADAAAAAAAHAPn/AAADAAAAAAAHAPr/AAADAAAAAAAHAPv/AAADAAAAAAAHAPz/AAADAAAAAAAHAP3/AAADAAAAAAAHAP7/AAADAAAAAAAHAP//AAADAAAAAAAHAAAAAAADAAAAAAAHAAEAAAADAAAAAAAHAAIAAAADAAAAAAAHAAMAAAADAAAAAAAHAAQAAAADAAAAAAAHAAUAAAADAAAAAAAHAAYAAAADAAAAAAAHAAcAAAADAAAAAAAHAAgAAAADAAAAAAAHAAkAAAADAAAAAAAIAPb/AAADAAAAAAAIAPf/AAADAAAAAAAIAPj/AAADAAAAAAAIAPn/AAADAAAAAAAIAPr/AAADAAAAAAAIAPv/AAADAAAAAAAIAPz/AAADAAAAAAAIAP3/AAADAAAAAAAIAP7/AAADAAAAAAAIAP//AAADAAAAAAAIAAAAAAADAAAAAAAIAAEAAAADAAAAAAAIAAIAAAADAAAAAAAIAAMAAAADAAAAAAAIAAQAAAADAAAAAAAIAAUAAAADAAAAAAAIAAYAAAADAAAAAAAIAAcAAAADAAAAAAAIAAgAAAADAAAAAAAIAAkAAAADAAAAAAAJAPb/AAADAAAAAAAJAPf/AAADAAAAAAAJAPj/AAADAAAAAAAJAPn/AAADAAAAAAAJAPr/AAADAAAAAAAJAPv/AAADAAAAAAAJAPz/AAADAAAAAAAJAP3/AAADAAAAAAAJAP7/AAADAAAAAAAJAP//AAADAAAAAAAJAAAAAAADAAAAAAAJAAEAAAADAAAAAAAJAAIAAAADAAAAAAAJAAMAAAADAAAAAAAJAAQAAAADAAAAAAAJAAUAAAADAAAAAAAJAAYAAAADAAAAAAAJAAcAAAADAAAAAAAJAAgAAAADAAAAAAAJAAkAAAADAAAAAAAKAPb/AAADAAAAAAAKAPf/AAADAAAAAAAKAPj/AAADAAAAAAAKAPn/AAADAAAAAAAKAPr/AAADAAAAAAAKAPv/AAADAAAAAAAKAPz/AAADAAAAAAAKAP3/AAADAAAAAAAKAP7/AAADAAAAAAAKAP//AAADAAAAAAAKAAAAAAADAAAAAAAKAAEAAAADAAAAAAAKAAIAAAADAAAAAAAKAAMAAAADAAAAAAAKAAQAAAADAAAAAAAKAAUAAAADAAAAAAAKAAYAAAADAAAAAAAKAAcAAAADAAAAAAAKAAgAAAADAAAAAAAKAAkAAAADAAAAAAALAPb/AAADAAAAAAALAPf/AAADAAAAAAALAPj/AAADAAAAAAALAPn/AAADAAAAAAALAPr/AAADAAAAAAALAPv/AAADAAAAAAALAPz/AAADAAAAAAALAP3/AAADAAAAAAALAP7/AAADAAAAAAALAP//AAADAAAAAAALAAAAAAADAAAAAAALAAEAAAADAAAAAAALAAIAAAADAAAAAAALAAMAAAADAAAAAAALAAQAAAADAAAAAAALAAUAAAADAAAAAAALAAYAAAADAAAAAAALAAcAAAADAAAAAAALAAgAAAADAAAAAAALAAkAAAADAAAAAAAMAPb/AAADAAAAAAAMAPf/AAADAAAAAAAMAPj/AAADAAAAAAAMAPn/AAADAAAAAAAMAPr/AAADAAAAAAAMAPv/AAADAAAAAAAMAPz/AAADAAAAAAAMAP3/AAADAAAAAAAMAP7/AAADAAAAAAAMAP//AAADAAAAAAAMAAAAAAADAAAAAAAMAAEAAAADAAAAAAAMAAIAAAADAAAAAAAMAAMAAAADAAAAAAAMAAQAAAADAAAAAAAMAAUAAAADAAAAAAAMAAYAAAADAAAAAAAMAAcAAAADAAAAAAAMAAgAAAADAAAAAAAMAAkAAAADAAAAAAANAPb/AAADAAAAAAANAPf/AAADAAAAAAANAPj/AAADAAAAAAANAPn/AAADAAAAAAANAPr/AAADAAAAAAANAPv/AAADAAAAAAANAPz/AAADAAAAAAANAP3/AAADAAAAAAANAP7/AAADAAAAAAANAP//AAADAAAAAAANAAAAAAADAAAAAAANAAEAAAADAAAAAAANAAIAAAADAAAAAAANAAMAAAADAAAAAAANAAQAAAADAAAAAAANAAUAAAADAAAAAAANAAYAAAADAAAAAAANAAcAAAADAAAAAAANAAgAAAADAAAAAAANAAkAAAADAAAAAAAOAPb/AAADAAAAAAAOAPf/AAADAAAAAAAOAPj/AAADAAAAAAAOAPn/AAADAAAAAAAOAPr/AAADAAAAAAAOAPv/AAADAAAAAAAOAPz/AAADAAAAAAAOAP3/AAADAAAAAAAOAP7/AAADAAAAAAAOAP//AAADAAAAAAAOAAAAAAADAAAAAAAOAAEAAAADAAAAAAAOAAIAAAADAAAAAAAOAAMAAAADAAAAAAAOAAQAAAADAAAAAAAOAAUAAAADAAAAAAAOAAYAAAADAAAAAAAOAAcAAAADAAAAAAAOAAgAAAADAAAAAAAOAAkAAAADAAAAAAAPAPb/AAADAAAAAAAPAPf/AAADAAAAAAAPAPj/AAADAAAAAAAPAPn/AAADAAAAAAAPAPr/AAADAAAAAAAPAPv/AAADAAAAAAAPAPz/AAADAAAAAAAPAP3/AAADAAAAAAAPAP7/AAADAAAAAAAPAP//AAADAAAAAAAPAAAAAAADAAAAAAAPAAEAAAADAAAAAAAPAAIAAAADAAAAAAAPAAMAAAADAAAAAAAPAAQAAAADAAAAAAAPAAUAAAADAAAAAAAPAAYAAAADAAAAAAAPAAcAAAADAAAAAAAPAAgAAAADAAAAAAAPAAkAAAADAAAAAAAAAPb/AAADAAAAAAAAAPf/AAADAAAAAAAAAPj/AAADAAAAAAAAAPn/AAADAAEAAAAAAPr/AAAAAAAAAAAAAPv/AAAAAAAAAAAAAPz/AAAAAAAAAAAAAP3/AAAAAAAAAAAAAP7/AAAAAAAAAAAAAP//AAACAAAAAAAAAAAAAAABAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAYAAAABAAEAAAAAAAcAAAADAAAAAAAAAAgAAAADAAAAAAAAAAkAAAADAAAAAAARAPb/AAADAAAAAAARAPf/AAADAAAAAAARAPj/AAADAAAAAAARAPn/AAADAAAAAAARAPr/AAADAAAAAAARAPv/AAADAAAAAAARAPz/AAADAAAAAAARAP3/AAADAAAAAAARAP7/AAADAAAAAAARAP//AAADAAAAAAARAAAAAAADAAAAAAARAAEAAAADAAAAAAARAAIAAAADAAAAAAARAAMAAAADAAAAAAARAAQAAAADAAAAAAARAAUAAAADAAAAAAARAAYAAAADAAAAAAARAAcAAAADAAAAAAARAAgAAAADAAAAAAARAAkAAAADAAAAAADt//X/AAADAAAAAADt/woAAAADAAAAAADt//b/AAADAAAAAADt//f/AAADAAAAAADt//j/AAADAAAAAADt//n/AAADAAAAAADt//r/AAADAAAAAADt//v/AAADAAAAAADt//z/AAADAAAAAADt//3/AAADAAAAAADt//7/AAADAAAAAADt////AAADAAAAAADt/wAAAAADAAAAAADt/wEAAAADAAAAAADt/wIAAAADAAAAAADt/wMAAAADAAAAAADt/wQAAAADAAAAAADt/wUAAAADAAAAAADt/wYAAAADAAAAAADt/wcAAAADAAAAAADt/wgAAAADAAAAAADt/wkAAAADAAAAAADu/woAAAADAAAAAADv/woAAAADAAAAAADw/woAAAADAAAAAADx/woAAAADAAAAAADy/woAAAADAAAAAADz/woAAAADAAAAAAD0/woAAAADAAAAAAD1/woAAAADAAAAAAD2/woAAAADAAAAAAD3/woAAAADAAAAAAD4/woAAAADAAAAAAD5/woAAAADAAAAAAD6/woAAAADAAAAAAD7/woAAAADAAAAAAD8/woAAAADAAAAAAD9/woAAAADAAAAAAD+/woAAAADAAAAAAD//woAAAADAAAAAAAAAAoAAAADAAAAAAABAAoAAAADAAAAAAACAAoAAAADAAAAAAADAAoAAAADAAAAAAAEAAoAAAADAAAAAAAFAAoAAAADAAAAAAAGAAoAAAADAAAAAAAHAAoAAAADAAAAAAAIAAoAAAADAAAAAAAJAAoAAAADAAAAAAAKAAoAAAADAAAAAAALAAoAAAADAAAAAAAMAAoAAAADAAAAAAANAAoAAAADAAAAAAAOAAoAAAADAAAAAAAPAAoAAAADAAAAAAAQAAoAAAADAAAAAAARAAoAAAADAAAAAAASAAoAAAADAAAAAAASAAkAAAADAAAAAAASAAgAAAADAAAAAAASAAcAAAADAAAAAAASAAYAAAADAAAAAAASAAUAAAADAAAAAAASAAQAAAADAAAAAAASAAMAAAADAAAAAAASAAIAAAADAAAAAAASAAEAAAADAAAAAAASAAAAAAADAAAAAAASAP//AAADAAAAAAASAP7/AAADAAAAAAASAP3/AAADAAAAAAASAPz/AAADAAAAAAASAPv/AAADAAAAAAASAPr/AAADAAAAAAASAPn/AAADAAAAAAASAPj/AAADAAAAAAASAPf/AAADAAAAAAASAPb/AAADAAAAAAASAPX/AAADAAAAAAARAPX/AAADAAAAAAAQAPX/AAADAAAAAAAPAPX/AAADAAAAAAAOAPX/AAADAAAAAAANAPX/AAADAAAAAAAMAPX/AAADAAAAAAALAPX/AAADAAAAAAAKAPX/AAADAAAAAAAJAPX/AAADAAAAAAAIAPX/AAADAAAAAAAHAPX/AAADAAAAAAAGAPX/AAADAAAAAAAFAPX/AAADAAAAAAAEAPX/AAADAAAAAAADAPX/AAADAAAAAAACAPX/AAADAAAAAAABAPX/AAADAAAAAAAAAPX/AAADAAAAAAD///X/AAADAAAAAAD+//X/AAADAAAAAAD9//X/AAADAAAAAAD8//X/AAADAAAAAAD7//X/AAADAAAAAAD6//X/AAADAAAAAAD5//X/AAADAAAAAAD4//X/AAADAAAAAAD3//X/AAADAAAAAAD2//X/AAADAAAAAAD1//X/AAADAAAAAAD0//X/AAADAAAAAADz//X/AAADAAAAAADy//X/AAADAAAAAADx//X/AAADAAAAAADw//X/AAADAAAAAADv//X/AAADAAAAAADu//X/AAADAAAAAAA=")
tile_set = SubResource("TileSet_opebo")

[node name="GridSpacesManager" type="Node2D" parent="."]
script = ExtResource("3_u5sy4")
grid_space_scene = ExtResource("4_gee14")

[node name="BallHolder" type="Node2D" parent="."]

[node name="BallMoveSpeedTimer" type="Timer" parent="."]
one_shot = true

[node name="GameUI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="GameUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftVBox" type="VBoxContainer" parent="GameUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="TopSpacer" type="Control" parent="GameUI/HBoxContainer/LeftVBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="P1PointsLabel" type="Label" parent="GameUI/HBoxContainer/LeftVBox"]
layout_mode = 2
text = "P1 Points: 0"
horizontal_alignment = 1

[node name="P2PointsLabel" type="Label" parent="GameUI/HBoxContainer/LeftVBox"]
layout_mode = 2
text = "P2 Points: 0"
horizontal_alignment = 1

[node name="MiddleSpacer" type="Control" parent="GameUI/HBoxContainer/LeftVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="TurnLabel" type="Label" parent="GameUI/HBoxContainer/LeftVBox"]
layout_mode = 2
text = "Player 1's Turn!"
horizontal_alignment = 1

[node name="BottomSpacer" type="Control" parent="GameUI/HBoxContainer/LeftVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="GameMiddleSpacer" type="VBoxContainer" parent="GameUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="TopSpacer" type="Control" parent="GameUI/HBoxContainer/GameMiddleSpacer"]
layout_mode = 2

[node name="GridSpaceButtonManager" type="GridContainer" parent="GameUI/HBoxContainer/GameMiddleSpacer"]
layout_mode = 2
columns = 12
script = ExtResource("6_0tnpc")
grid_space_button_scene = ExtResource("7_vtaks")

[node name="BottomSpacer" type="Control" parent="GameUI/HBoxContainer/GameMiddleSpacer"]
layout_mode = 2

[node name="PlaceablePieces" type="Control" parent="GameUI/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RightVBox" type="VBoxContainer" parent="GameUI/HBoxContainer/PlaceablePieces"]
layout_mode = 2
offset_left = 4.0
offset_right = 384.0
offset_bottom = 648.0
size_flags_horizontal = 3

[node name="TopSpacer" type="Control" parent="GameUI/HBoxContainer/PlaceablePieces/RightVBox"]
layout_mode = 2

[node name="VerticalWallButton" type="TextureButton" parent="GameUI/HBoxContainer/PlaceablePieces/RightVBox"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("6_gee14")
stretch_mode = 4

[node name="HorizontalWallButton" type="TextureButton" parent="GameUI/HBoxContainer/PlaceablePieces/RightVBox"]
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("7_0tnpc")
stretch_mode = 4

[node name="BombButton" type="TextureButton" parent="GameUI/HBoxContainer/PlaceablePieces/RightVBox"]
visible = false
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("8_vtaks")
stretch_mode = 4

[connection signal="finished_placing_pieces" from="GridSpacesManager" to="." method="_on_grid_spaces_manager_finished_placing_pieces"]
[connection signal="timeout" from="BallMoveSpeedTimer" to="." method="_on_ball_move_speed_timer_timeout"]
[connection signal="pressed" from="GameUI/HBoxContainer/PlaceablePieces/RightVBox/VerticalWallButton" to="." method="_on_vertical_wall_button_pressed"]
[connection signal="pressed" from="GameUI/HBoxContainer/PlaceablePieces/RightVBox/HorizontalWallButton" to="." method="_on_horizontal_wall_button_pressed"]
[connection signal="pressed" from="GameUI/HBoxContainer/PlaceablePieces/RightVBox/BombButton" to="." method="_on_bomb_button_pressed"]
